# hash-table-aggregation-benchmark

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Results.md  benchmark.py  load_data.sh  main.cpp
cmake/: sanitize.cmake  tools.cmake
contrib/: CMakeLists.txt
contrib/AggregationHashTable/: CMakeLists.txt  GroupHashTable.h
contrib/ClickHouseHashTable/: Allocator.cpp  Allocator.h  CMakeLists.txt  Hash.h  HashMap.h  HashTable.h  HashTableAllocator.h  version.txt
src/: CMakeLists.txt  HashFunctions.h  HashTables.h  Utils.cpp  Utils.h  defines.h  hash_tables.h  main.cpp  utils.cpp  utils.h
